Added deactivate trip endpoint
